--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- html holding page -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>WLH Games</title>
+    </head>
+    <body id="background">
+        <img id="main_logo" src="logo.png">
+    </body>
+</html>
