--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <title>WLH Games</title>
+        <link href="main.css" rel="stylesheet">
     </head>
     <body id="background">
         <img id="main_logo" src="logo.png">
