card image and refactor

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </h1>
                     </div>
                     <div>
-                        <h5>Wild Lamb Hoggs Games</h5>
+                        <h5 style="color:white;">Wild Lamb Hoggs Games</h5>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                             <p class="hero-paragraph">Identity theft is not a joke... it's a game!</p>
                             <div class="hero-form field field-grouped">
                                 <div class="control control-expanded">
-                                    <input class="input" type="email" name="email" placeholder="Your email&hellip;">
+                                    <input class="input" type="email" name="email" placeholder="Your email">
                                 </div>
                                 <div class="control">
                                     <a class="button button-primary button-block" href="#">Join Waiting List</a>
@@ -50,15 +50,15 @@
                         </div>
                         <div class="container">
                             <div class="hero-inner">
-                                <div class="hero-copy">
-                                    <image src="./logo.png"></image>
+                                <div class="hero-image">
+                                    <image src="./threecards.png"></image>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-<!-- 
+            <!-- 
             <section class="features section">
                 <div class="container">
                     <div class="features-inner section-inner">
@@ -270,11 +270,11 @@
             </section> -->
         </main>
 
-        <!-- <footer class="site-footer">
+        <footer class="site-footer">
             <div class="container">
                 <div class="site-footer-inner has-top-divider">
                     <div class="brand footer-brand">
-                        <a href="#">
+                        <!-- <a href="#">
                             <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
                                 <title>April</title>
                                 <defs>
@@ -311,9 +311,9 @@
                                     </g>
                                 </g>
                             </svg>
-                        </a>
+                        </a> -->
                     </div>
-                    <ul class="footer-links list-reset">
+                    <!-- <ul class="footer-links list-reset">
                         <li>
                             <a href="#">Contact</a>
                         </li>
@@ -326,8 +326,8 @@
                         <li>
                             <a href="#">Support</a>
                         </li>
-                    </ul>
-                    <ul class="footer-social-links list-reset">
+                    </ul> -->
+                    <!-- <ul class="footer-social-links list-reset">
                         <li>
                             <a href="#">
                                 <span class="screen-reader-text">Facebook</span>
@@ -358,11 +358,18 @@
                                 </svg>
                             </a>
                         </li>
+                    </ul> -->
+                    <ul>
+                        <div>
+                            <p>&copy; 2018 April, all rights reserved</p>
+                        </div>
+                        <div>
+                            <p>lamb@wlhgames.com</p>
+                        </div>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 April, all rights reserved</div>
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </div>
 
     <script src="dist/js/main.min.js"></script>
