--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>April Template</title>
+    <title>WLH Games</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.min.css">
     <link rel="stylesheet" href="./main.css">
@@ -41,11 +41,21 @@
                             <p class="hero-paragraph">Identity theft is not a joke... it's a game!</p>
                             <div class="hero-form field field-grouped">
                                 <div class="control control-expanded">
-                                    <input class="input" type="email" name="email" placeholder="Your email">
+                                    <input id="emailInput" class="input" type="email" name="email" placeholder="Your email">
                                 </div>
                                 <div class="control">
-                                    <a class="button button-primary button-block" href="#">Join Waiting List</a>
+                                    <a class="button button-primary button-block" onclick="writeEmail()">Join Waiting List</a>
                                 </div>
+                            </div>
+                            <div class="alert alert-success group" role="alert" id="succ">
+                                <p id="txt">
+                                    <strong>Success!</strong> We will contact you with more information!
+                                </p>
+                            </div>
+                            <div class="alert group" role="alert" id="fail">
+                                <p id="txt">
+                                    <strong>Sorry!</strong> You have entered an invalid E-mail.
+                                </p>
                             </div>
                         </div>
                         <div class="container">
@@ -371,7 +381,76 @@
             </div>
         </footer>
     </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
 
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-analytics.js"></script>
+
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyBWMTi9N7ljkcnTm7yJfEquljKVMmaJnCk",
+            authDomain: "wlhgames.firebaseapp.com",
+            projectId: "wlhgames",
+            storageBucket: "wlhgames.appspot.com",
+            messagingSenderId: "853968681284",
+            appId: "1:853968681284:web:23fe2a0637ac258b2dff11",
+            measurementId: "G-QWPFB1W32M"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+        var db = firebase.database();
+    </script>
+
+    <script>
+        function writeEmail() {
+            const data = document.getElementById('emailInput').value;
+
+
+            if (ValidateEmail(data)) {
+                db.ref('emails').push({
+                    email: data
+                }).then(function(snapshot) {
+                    pass(); // some success method
+                }, function(error) {
+                    console.log('error' + error);
+                    fail(); // some error method
+                });
+                document.getElementById('emailInput').value = "";
+            }
+
+        }
+
+        function ValidateEmail(mail) {
+            if (/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(mail)) {
+                pass();
+                return (true);
+            } else {
+                fail();
+                return (false);
+            }
+        }
+
+
+        function fail() {
+
+            $('#fail').finish().show().delay(1000).fadeOut(6000);
+
+        }
+
+        function pass() {
+
+            $('#succ').finish().show().delay(1000).fadeOut(6000);
+
+        }
+    </script>
+    <script src="dist/js/jquery-2.1.3.min.js"></script>
     <script src="dist/js/main.min.js"></script>
 </body>
 
