--- a/index.html
+++ b/index.html
@@ -1,74 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>WLH Games</title>
+		<link
+			href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="dist/css/style.min.css" />
+		<link rel="stylesheet" href="./main.css" />
+		<script src="https://unpkg.com/animejs@2.2.0/anime.js"></script>
+		<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+	</head>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WLH Games</title>
-    <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
-    <link rel="stylesheet" href="dist/css/style.min.css">
-    <link rel="stylesheet" href="./main.css">
-    <script src="https://unpkg.com/animejs@2.2.0/anime.js"></script>
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
-</head>
+	<body class="is-boxed has-animations">
+		<div class="body-wrap boxed-container">
+			<header class="site-header dark">
+				<div class="container">
+					<div class="site-header-inner">
+						<div class="brand header-brand">
+							<h1 class="m-0">
+								<a href="#">
+									<image
+										src="./logo.png"
+										style="width: 100px"
+									></image>
+								</a>
+							</h1>
+						</div>
+						<div>
+							<h5 style="color: white">Wild Lamb Hoggs Games</h5>
+						</div>
+					</div>
+				</div>
+			</header>
 
-<body class="is-boxed has-animations">
-    <div class="body-wrap boxed-container">
-        <header class="site-header">
-            <div class="container">
-                <div class="site-header-inner">
-                    <div class="brand header-brand">
-                        <h1 class="m-0">
-                            <a href="#">
-                                <image src="./logo.png" style="width:100px"></image>
-                            </a>
-                        </h1>
-                    </div>
-                    <div>
-                        <h5 style="color:white;">Wild Lamb Hoggs Games</h5>
-                    </div>
-                </div>
-            </div>
-        </header>
-
-        <main>
-            <section class="hero">
-                <div class="container">
-                    <div class="hero-inner">
-                        <div class="hero-copy">
-                            <h1 class="hero-title mt-0">Identity Theft</h1>
-                            <p class="hero-paragraph">Identity theft is not a joke... it's a game!</p>
-                            <div class="hero-form field field-grouped">
-                                <div class="control control-expanded">
-                                    <input id="emailInput" class="input" type="email" name="email" placeholder="Your email">
-                                </div>
-                                <div class="control">
-                                    <a class="button button-primary button-block" onclick="writeEmail()">Join Waiting List</a>
-                                </div>
-                            </div>
-                            <div class="alert alert-success group" role="alert" id="succ">
-                                <p id="txt">
-                                    <strong>Success!</strong> We will contact you with more information!
-                                </p>
-                            </div>
-                            <div class="alert group" role="alert" id="fail">
-                                <p id="txt">
-                                    <strong>Sorry!</strong> You have entered an invalid E-mail.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="container">
-                            <div class="hero-inner">
-                                <div class="hero-image">
-                                    <image src="./threecards.png"></image>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- 
+			<main>
+				<section class="hero">
+					<div class="container">
+						<div class="hero-inner">
+							<div class="hero-copy">
+								<!-- <h1 class="hero-title mt-0">Identity Theft</h1> -->
+								<image src="./title.png"></image>
+								<p class="hero-paragraph">
+									Identity theft is not a joke... it's a game!
+								</p>
+								<div class="hero-form field field-grouped">
+									<div class="control control-expanded">
+										<input
+											id="emailInput"
+											class="input"
+											type="email"
+											name="email"
+											placeholder="Your email"
+										/>
+									</div>
+									<div class="control">
+										<a
+											class="button button-primary button-block dark"
+											onclick="writeEmail()"
+											>Join Waiting List</a
+										>
+									</div>
+								</div>
+								<div
+									class="alert alert-success group"
+									role="alert"
+									id="succ"
+								>
+									<p id="txt">
+										<strong>Success!</strong> We will
+										contact you with more information!
+									</p>
+								</div>
+								<div class="alert group" role="alert" id="fail">
+									<p id="txt">
+										<strong>Sorry!</strong> You have entered
+										an invalid E-mail.
+									</p>
+								</div>
+                                <br/>
+								<div>
+									<a
+										class="button button-primary button-block dark"
+										href="./rulebook.html"
+										>View Rulebook</a
+									>
+								</div>
+							</div>
+							<div class="container">
+								<div class="hero-inner">
+									<div class="hero-image">
+										<image src="./threecards.png"></image>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- 
             <section class="features section">
                 <div class="container">
                     <div class="features-inner section-inner">
@@ -278,13 +310,13 @@
                     </div>
                 </div>
             </section> -->
-        </main>
+			</main>
 
-        <footer class="site-footer">
-            <div class="container">
-                <div class="site-footer-inner has-top-divider">
-                    <div class="brand footer-brand">
-                        <!-- <a href="#">
+			<footer class="site-footer dark">
+				<div class="container">
+					<div class="site-footer-inner has-top-divider">
+						<div class="brand footer-brand">
+							<!-- <a href="#">
                             <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
                                 <title>April</title>
                                 <defs>
@@ -322,8 +354,8 @@
                                 </g>
                             </svg>
                         </a> -->
-                    </div>
-                    <!-- <ul class="footer-links list-reset">
+						</div>
+						<!-- <ul class="footer-links list-reset">
                         <li>
                             <a href="#">Contact</a>
                         </li>
@@ -337,7 +369,7 @@
                             <a href="#">Support</a>
                         </li>
                     </ul> -->
-                    <!-- <ul class="footer-social-links list-reset">
+						<!-- <ul class="footer-social-links list-reset">
                         <li>
                             <a href="#">
                                 <span class="screen-reader-text">Facebook</span>
@@ -369,89 +401,86 @@
                             </a>
                         </li>
                     </ul> -->
-                    <ul>
-                        <div>
-                            <p>&copy; 2018 April, all rights reserved</p>
-                        </div>
-                        <div>
-                            <p>lamb@wlhgames.com</p>
-                        </div>
-                    </ul>
-                </div>
-            </div>
-        </footer>
-    </div>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+						<ul>
+							<div>
+								<p>&copy; 2022 January, all rights reserved</p>
+							</div>
+							<div>
+								<p>lamb@wlhgames.com</p>
+							</div>
+						</ul>
+					</div>
+				</div>
+			</footer>
+		</div>
+		<!-- The core Firebase JS SDK is always required and must be listed first -->
+		<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
+		<!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-analytics.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-analytics.js"></script>
 
-    <script>
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        var firebaseConfig = {
-            apiKey: "AIzaSyBWMTi9N7ljkcnTm7yJfEquljKVMmaJnCk",
-            authDomain: "wlhgames.firebaseapp.com",
-            projectId: "wlhgames",
-            storageBucket: "wlhgames.appspot.com",
-            messagingSenderId: "853968681284",
-            appId: "1:853968681284:web:23fe2a0637ac258b2dff11",
-            measurementId: "G-QWPFB1W32M"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-        var db = firebase.database();
-    </script>
+		<script>
+			// Your web app's Firebase configuration
+			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+			var firebaseConfig = {
+				apiKey: "AIzaSyBWMTi9N7ljkcnTm7yJfEquljKVMmaJnCk",
+				authDomain: "wlhgames.firebaseapp.com",
+				projectId: "wlhgames",
+				storageBucket: "wlhgames.appspot.com",
+				messagingSenderId: "853968681284",
+				appId: "1:853968681284:web:23fe2a0637ac258b2dff11",
+				measurementId: "G-QWPFB1W32M",
+			};
+			// Initialize Firebase
+			firebase.initializeApp(firebaseConfig);
+			firebase.analytics();
+			var db = firebase.database();
+		</script>
 
-    <script>
-        function writeEmail() {
-            const data = document.getElementById('emailInput').value;
+		<script>
+			function writeEmail() {
+				const data = document.getElementById("emailInput").value;
 
+				if (ValidateEmail(data)) {
+					db.ref("emails")
+						.push({
+							email: data,
+						})
+						.then(
+							function (snapshot) {
+								pass(); // some success method
+							},
+							function (error) {
+								console.log("error" + error);
+								fail(); // some error method
+							}
+						);
+					document.getElementById("emailInput").value = "";
+				}
+			}
 
-            if (ValidateEmail(data)) {
-                db.ref('emails').push({
-                    email: data
-                }).then(function(snapshot) {
-                    pass(); // some success method
-                }, function(error) {
-                    console.log('error' + error);
-                    fail(); // some error method
-                });
-                document.getElementById('emailInput').value = "";
-            }
+			function ValidateEmail(mail) {
+				if (/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(mail)) {
+					pass();
+					return true;
+				} else {
+					fail();
+					return false;
+				}
+			}
 
-        }
+			function fail() {
+				$("#fail").finish().show().delay(1000).fadeOut(6000);
+			}
 
-        function ValidateEmail(mail) {
-            if (/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(mail)) {
-                pass();
-                return (true);
-            } else {
-                fail();
-                return (false);
-            }
-        }
-
-
-        function fail() {
-
-            $('#fail').finish().show().delay(1000).fadeOut(6000);
-
-        }
-
-        function pass() {
-
-            $('#succ').finish().show().delay(1000).fadeOut(6000);
-
-        }
-    </script>
-    <script src="dist/js/jquery-2.1.3.min.js"></script>
-    <script src="dist/js/main.min.js"></script>
-</body>
-
+			function pass() {
+				$("#succ").finish().show().delay(1000).fadeOut(6000);
+			}
+		</script>
+		<script src="dist/js/jquery-2.1.3.min.js"></script>
+		<script src="dist/js/main.min.js"></script>
+	</body>
 </html>
