fix png extension

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="hero-inner">
 							<div class="hero-copy">
 								<!-- <h1 class="hero-title mt-0">Identity Theft</h1> -->
-								<image src="./title.png"></image>
+								<image src="./idtheft.png"></image>
 								<p class="hero-paragraph">
 									Identity theft is not a joke... it's a game!
 								</p>
