--- a/rulebook.html
+++ b/rulebook.html
@@ -1,1 +1,1 @@
-<embed src="./rulebook.pdf" width="100%" height="100%" />
+<iframe src="./rulebook.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
